--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,68 @@
-    <!-- activity_main.xml -->
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <!-- RecyclerView for displaying flashcards -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/flashCardRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        android:layout_above="@id/fabAddFlashCard"
+        android:layout_marginBottom="100dp" />
 
-        <!-- RecyclerView for displaying flashcards -->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/flashCardRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="16dp"
-            android:layout_above="@id/fabAddFlashCard"/>
+    <!-- TextView to display FlashCard Question -->
+    <TextView
+        android:id="@+id/tvFlashCardQuestionDisplay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/flashCardRecyclerView"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Question"
+        android:textSize="20sp" />
 
-        <!-- Floating Action Button for adding new flashcards -->
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fabAddFlashCard"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="168dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="31dp"
-            android:contentDescription="Add Flash Card"
-            android:src="@drawable/ic_add" />
+    <!-- TextView to display FlashCard Answer -->
+    <TextView
+        android:id="@+id/tvFlashCardAnswerDisplay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvFlashCardQuestionDisplay"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="Answer"
+        android:textSize="18sp" />
 
+    <!-- Button to Flip to Next Flash Card -->
+    <Button
+        android:id="@+id/btnFlipCard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvFlashCardAnswerDisplay"
+        android:layout_marginTop="16dp"
+        android:layout_centerHorizontal="true"
+        android:text="Flip Card" />
 
-    </RelativeLayout>
+    <!-- Button to Display Flash Card in Full Screen -->
+    <Button
+        android:id="@+id/btnFullScreen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btnFlipCard"
+        android:layout_marginTop="16dp"
+        android:layout_centerHorizontal="true"
+        android:text="Full Screen" />
+
+    <!-- Floating Action Button for adding new flashcards -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAddFlashCard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:contentDescription="Add Flash Card"
+        android:src="@drawable/ic_add" />
+
+</RelativeLayout>
